--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -1,19 +1,32 @@
 .nav {
     display: flex;
     justify-content: space-around;
-    border: 5px solid rgb(81, 178, 224);
-    background-color:rgb(81, 178, 224);
+    border: 5px solid rgb(9, 24, 19);
+    background-color:rgb(9, 24, 19);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .navitem {
-a {text-decoration: none;
-    color: aliceblue;}
-/* b {text-decoration: white;} */
-border: 2px solid rgb(112, 186, 71);
-background-color: rgb(112, 186, 71);
-font-size: larger;
-/* background-color: black; */
-/* font-size: larger; */
+    appearance: none;
+    background-color: #2ea44f;
+    border: 1px solid rgba(27, 31, 35, .15);
+    border-radius: 6px;
+    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    padding: 6px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    white-space: nowrap;
 
 }
