--- a/src/main/resources/static/css/cardetails.css
+++ b/src/main/resources/static/css/cardetails.css
@@ -15,7 +15,7 @@
     .cardetailscontent {
 
         
-        border:5px solid;
+        border:5px rgb(9, 24, 19);
         text-align: center;
         padding: 10px;
         margin: 5px;
@@ -24,7 +24,7 @@
         font-size: 15px;
         font-weight: bold;
         border-color: #2ea44f;
-        background-color: rgb(19, 19, 17);
+        background-color: rgb(9, 24, 19);
         color: white;
 
     }
@@ -39,6 +39,6 @@
         font-size: 15px;
         font-weight: bold;
         border-color: #2ea44f;
-        background-color: rgb(19, 19, 17);
+        background-color: rgb(9, 24, 19);
         color: white;
     }
