--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,10 +1,19 @@
-.big-margin {
-    /* border: 1px solid #ccc; */
-    /* background: rgb(47, 31, 35); */
-    background-clip: padding-box;
-    box-shadow: 0 0 10px #ff0000;
-    /* margin: 1px; */
+.home{
+    border:4px solid #2ea44f;
+    border-radius: 10px;
+    padding: 4px;
+    
+    /* margin: 5px; */
+    
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    background-color: rgb(9, 24, 19);
+    color: white;
+
 }
+
 .homepage {
     background-color: rgb(47, 31, 35);
     background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/1970-1973_Nissan_Fairlady_Z.jpg/2880px-1970-1973_Nissan_Fairlady_Z.jpg), rgb(47, 31, 35);
@@ -12,17 +21,5 @@
     background-size: cover;
 }
 
-.home{
-    border:5px solid;
-    padding: 10px;
-    margin: 5px;
-    border-radius: 10px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 15px;
-    font-weight: bold;
-    border-color: #2ea44f;
-    background-color: rgb(9, 24, 19);
-    color: white;
 
-}
 
