--- a/src/main/resources/static/css/signin.css
+++ b/src/main/resources/static/css/signin.css
@@ -1,19 +1,14 @@
 .signinpage{
 
-    display:flex;
+    display: flex;
     justify-content: center;
-    height: 100vh;
-    width: 100vw;
+    height: auto;
+    width: auto;
     align-items: center;
 
-}    
-    
-
+}
     .signinbox {
-        display: flex;
-        justify-content: center;
-        height: 50vh;
-        width: 50vw;
+        width: 30vw;
         /* align-items: center; */
         text-align: center;
         border:5px solid;
@@ -26,4 +21,18 @@
         border-color: #2ea44f;
         background-color: rgb(9, 24, 19);
         color: white;
+}
+
+.signinheader{
+    border:5px solid;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    border-color: #2ea44f;
+    background-color: rgb(9, 24, 19);
+    color: white;
+
 }
