--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -2,22 +2,36 @@
 
     display:flex;
     justify-content: center;
-    height: 100vh;
-    width: 100vw;
+    height: auto;
+    width: auto;
     align-items: center;
 
 }
 
 .signupbox {
-    display: flex;
-    justify-content: center;
-    height: 50vh;
-    width: 50vw;
+    /* display: flex; */
+    /* justify-content: space-between; */
+    /* height: 75vh; */
+    width: 30vw;
     /* align-items: center; */
     text-align: center;
     border:5px solid;
-    padding: 10px;
+    padding: 5px;
     /* margin: 5px; */
+    border-radius: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    border-color: #2ea44f;
+    background-color: rgb(9, 24, 19);
+    color: white;   
+
+}
+
+.signupheader {
+    border:5px solid;
+    padding: 10px;
+    margin: 5px;
     border-radius: 10px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 15px;
