--- a/src/main/resources/static/css/availablecars.css
+++ b/src/main/resources/static/css/availablecars.css
@@ -33,14 +33,13 @@
 }
 
 .availablecarsheader{
-        border:5px solid;
-        padding: 10px;
-        margin: 5px;
-        border-radius: 10px;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 15px;
-        font-weight: bold;
-        border-color: #2ea44f;
-        background-color: rgb(9, 24, 19);
-        color: white;
+    border:4px solid #2ea44f;
+    border-radius: 10px;
+    padding: 4px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+    background-color: rgb(9, 24, 19);
+    color: white;
 }
