--- a/src/main/resources/static/css/signin.css
+++ b/src/main/resources/static/css/signin.css
@@ -24,14 +24,13 @@
 }
 
 .signinheader{
-    border:5px solid;
-    padding: 10px;
-    margin: 5px;
+    border:4px solid #2ea44f;
     border-radius: 10px;
+    padding: 4px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 12px;
+    font-size: 22px;
     font-weight: bold;
-    border-color: #2ea44f;
+    text-align: center;
     background-color: rgb(9, 24, 19);
     color: white;
 
