--- a/src/main/resources/static/css/availablecars.css
+++ b/src/main/resources/static/css/availablecars.css
@@ -24,11 +24,11 @@
     
 .caritems img{
     
-    width: 100%;
+    width: auto;
     height: auto;
-    max-width: 200px;
+    max-width: 300px;
     max-height: 200px;
-    object-fit: contain;
+    object-fit: cover;
     
 }
 
@@ -43,3 +43,8 @@
     background-color: rgb(9, 24, 19);
     color: white;
 }
+
+.masterdiv {
+    background-color: rgb(19, 19, 17)
+}
+
