--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -12,6 +12,7 @@
 }
 
 .homepage {
+    display: block;
     background-color: rgb(47, 31, 35);
     background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/1970-1973_Nissan_Fairlady_Z.jpg/2880px-1970-1973_Nissan_Fairlady_Z.jpg), rgb(47, 31, 35);
     height: 75vh;
@@ -19,7 +20,15 @@
 }
 
 .masterdiv {
-    background-color: rgb(19, 19, 17)
+    display: block;
+    background-color: rgb(19, 19, 17);
+    height: 100vh;
+}
+
+.masterdiv footer {
+    color: white;
+    text-align: end;
+    
 }
 
 
