--- a/src/main/resources/static/css/editprofile.css
+++ b/src/main/resources/static/css/editprofile.css
@@ -1,18 +1,17 @@
-.userprofileheader {
-    
-    border:4px solid #2ea44f;
-    border-radius: 10px;
-    padding: 4px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 22px;
-    font-weight: bold;
-    text-align: center;
-    background-color: rgb(9, 24, 19);
-    color: white;
+.editprofilepage{
+
+    display:flex;
+    justify-content: center;
+    height: auto;
+    width: auto;
+    align-items: center;
 
 }
-.editprofile {
-    
+
+.editprofilebox {
+    /* display: flex; */
+    /* justify-content: space-between; */
+    /* height: 75vh; */
     width: 30vw;
     /* align-items: center; */
     text-align: center;
@@ -25,23 +24,28 @@
     font-weight: bold;
     border-color: #2ea44f;
     background-color: rgb(9, 24, 19);
-    color: white;  
+    color: white;   
+
+}
+
+.editprofileheader {
+    
+    border:4px solid #2ea44f;
+    border-radius: 10px;
+    padding: 4px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+    background-color: rgb(9, 24, 19);
+    color: white;
+
 }
 
 .masterdiv {
     background-color: rgb(19, 19, 17);
     height: 100vh;
 }
-
-.editprofilepage {
-    display:flex;
-    justify-content: center;
-    height: auto;
-    width: auto;
-    align-items: center;
-}
-
-
 
 .submitbutton {
     appearance: none;
@@ -67,3 +71,4 @@
     white-space: nowrap;
 
 }
+
