--- a/src/main/resources/static/css/cart.css
+++ b/src/main/resources/static/css/cart.css
@@ -1,21 +1,35 @@
+
+
 .cartitems {
-    display: flexbox;
-    border:5px rgb(9, 24, 19);
-        text-align: center;
-        padding: 10px;
-        margin: 5px;
-        border-radius: 10px;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 15px;
-        font-weight: bold;
-        border-color: #2ea44f;
-        background-color: rgb(9, 24, 19);
-        color: white;
-        
+    border:5px solid;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    border-color: #2ea44f;
+    background-color: rgb(9, 24, 19);
+    color: white;
         
 
 }
 
-.carpage {
-    background-color: black;
+.cartitems img{
+    
+    width: auto;
+    height: auto;
+    max-width: 300px;
+    max-height: 200px;
+    object-fit: cover;
+    
 }
+
+.cartpage {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.masterdiv {
+    background-color: rgb(19, 19, 17)
+} 
