styling, google maps embed

--- a/src/main/resources/static/css/signin.css
+++ b/src/main/resources/static/css/signin.css
@@ -1,3 +1,7 @@
+body {
+    background-color:rgb(19, 19, 17)!important;
+}
+
 .signinpage{
 
     display: flex;
@@ -33,5 +37,37 @@
     text-align: center;
     background-color: rgb(9, 24, 19);
     color: white;
-
 }
+
+.signinbutton {
+    appearance: none;
+        background-color: rgb(46, 164, 78);
+        border: 1px solid rgba(27, 31, 35, .15);
+        border-radius: 6px;
+        box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+        box-sizing: border-box;
+        color: white;
+        cursor: pointer;
+        display: inline-block;
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 20px;
+        padding: 6px 16px;
+        position: relative;
+        text-align: center;
+        text-decoration: none;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        vertical-align: middle;
+        white-space: nowrap;
+}
+
+.map {
+    border-radius: 10px;
+    padding: 5px;
+    height: 600px; /* Adjust height as needed */
+    width: 100%;   /* Adjust width as needed */
+    border: 2px solid red;
+    color: white;
+  }
