--- a/src/main/resources/static/css/availablecars.css
+++ b/src/main/resources/static/css/availablecars.css
@@ -1,13 +1,14 @@
-.carpage {
+body {
+    background-color:rgb(19, 19, 17)!important;
+}
 
+.carpage {
     display: flex;
     flex-wrap: wrap;
-
+    justify-content: center;
 }
     
 .caritems {
-
-    
     border:5px solid;
     padding: 10px;
     margin: 5px;
@@ -17,19 +18,16 @@
     font-weight: bold;
     border-color: #2ea44f;
     background-color: rgb(9, 24, 19);
-    
-     
-
 }
     
 .caritems img{
-    
     width: auto;
     height: auto;
-    max-width: 300px;
+    max-width: 320px;
     max-height: 200px;
+    min-width: 320px;
+    min-height: 200px;
     object-fit: cover;
-    
 }
 
 .availablecarsheader{
@@ -44,8 +42,48 @@
     color: white;
 }
 
-.masterdiv {
-    background-color: rgb(19, 19, 17);
-    min-height: 100%;
+.searchbutton {
+    appearance: none;
+    background-color: rgb(46, 164, 78);
+    border: 1px solid rgba(27, 31, 35, .15);
+    border-radius: 6px;
+    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+    box-sizing: border-box;
+    color: white;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    padding: 6px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    white-space: nowrap;
 }
 
+.container{
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap:0px;
+    grid-column-gap:0px;
+    border:4px solid #2ea44f;
+    border-radius: 10px;
+    padding: 4px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+
+  .carfilter {
+    padding: 4px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+    background-color: rgb(9, 24, 19);
+    color: white;
+  }
