--- a/src/main/resources/static/css/availableusers.css
+++ b/src/main/resources/static/css/availableusers.css
@@ -1,14 +1,19 @@
-.masterdiv {
-    background-color: rgb(19, 19, 17);
-    height: 100vh;
+body {
+    background-color:rgb(19, 19, 17)!important;
 }
 
 .availableuserspage {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+}
+
+.useritems em {
+    color: red;
 }
 
 .useritems {
+    display: grid;
     border:5px solid;
     padding: 10px;
     margin: 5px;
@@ -19,8 +24,31 @@
     border-color: #2ea44f;
     color: white;
     background-color: rgb(9, 24, 19);
+    text-align: center;
 }
 
-.masterdiv h1 {
+.availableusersheader{
+    border:4px solid #2ea44f;
+    border-radius: 10px;
+    padding: 4px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+    background-color: rgb(9, 24, 19);
     color: white;
+}
+
+.userinfo {
+    border:2px solid;
+    padding: 5px;
+    margin: 2px;
+    border-radius: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    border-color: rgb(64, 166, 250);
+    color: white;
+    background-color: rgb(9, 24, 19);
+    text-align: center;
 }
