--- a/src/main/resources/static/css/cardetails.css
+++ b/src/main/resources/static/css/cardetails.css
@@ -1,3 +1,7 @@
+body {
+    background-color:rgb(19, 19, 17)!important;
+}
+
     .carouselsize {
 
     max-width: 600px;
@@ -13,8 +17,6 @@
     }
     
     .cardetailscontent {
-
-        
         border:5px rgb(9, 24, 19);
         text-align: center;
         padding: 10px;
@@ -24,7 +26,7 @@
         font-size: 15px;
         font-weight: bold;
         border-color: #2ea44f;
-        background-color: rgb(9, 24, 19);
+        background-color: rgb(9,24,19);
         color: white;
 
     }
@@ -41,3 +43,50 @@
         background-color: rgb(9, 24, 19);
         color: white;
     }
+
+    .addtocartbutton {
+        appearance: none;
+        background-color: rgb(46, 164, 78);
+        border: 1px solid rgba(27, 31, 35, .15);
+        border-radius: 6px;
+        box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+        box-sizing: border-box;
+        color: white;
+        cursor: pointer;
+        display: inline-block;
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 20px;
+        padding: 6px 16px;
+        position: relative;
+        text-align: center;
+        text-decoration: none;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        vertical-align: middle;
+        white-space: nowrap;
+    
+    }
+
+.cardetailsbox {
+    border:5px solid;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    border-color: #2ea44f;
+    background-color: rgb(9, 24, 19);
+    min-width: 700px;
+        
+}
+.cardetailsflex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+
+
+}
