--- a/src/main/resources/static/css/cart.css
+++ b/src/main/resources/static/css/cart.css
@@ -1,4 +1,6 @@
-
+body {
+    background-color:rgb(19, 19, 17)!important;
+}
 
 .cartitems {
     border:5px solid;
@@ -11,25 +13,84 @@
     border-color: #2ea44f;
     background-color: rgb(9, 24, 19);
     color: white;
-        
-
 }
 
-.cartitems img{
-    
+.cartitems img {
     width: auto;
     height: auto;
-    max-width: 300px;
-    max-height: 200px;
+    max-width: 288px;
+    max-height: 162px;
+    min-width: 288px;
+    max-width: 162px;
     object-fit: cover;
-    
 }
 
 .cartpage {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
+    height: auto;
+    width: auto;
 }
 
 .masterdiv {
     background-color: rgb(19, 19, 17)
-} 
+}
+
+.cartbutton {
+    appearance: none;
+    background-color: rgb(46, 164, 78);
+    border: 1px solid rgba(27, 31, 35, .15);
+    border-radius: 6px;
+    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+    box-sizing: border-box;
+    color: white;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    padding: 6px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    white-space: nowrap;
+}
+
+.shopingcartheader {
+    border:4px solid #2ea44f;
+    border-radius: 10px;
+    padding: 4px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+    background-color: rgb(9, 24, 19);
+    color: white;
+}
+
+.checkoutbox {
+    border:5px solid;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    border-color: #2ea44f;
+    background-color: rgb(9, 24, 19);
+    min-width: 256px;
+}
+
+.checkoutflex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
