--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,3 +1,7 @@
+body {
+    background-color:rgb(31,29,27)!important;
+}
+
 .home{
     border:4px solid #2ea44f;
     border-radius: 10px;
@@ -19,12 +23,8 @@
     background-size: cover;
 }
 
-.masterdiv {
-    background-color: rgb(19, 19, 17);
-    height: 100vh;
-}
 
-.masterdiv footer {
+footer {
     color: white;
     text-align: end; 
 }
