--- a/src/main/resources/static/css/userdetails.css
+++ b/src/main/resources/static/css/userdetails.css
@@ -2,15 +2,26 @@ body {
     background-color:rgb(19, 19, 17)!important;
 }
 
-.addcarpage {
+.flexbox {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    height: auto;
-    width: auto;
-    align-items: center;
 }
 
-.addcarheader {
+.edituserbox {
+    border:5px solid;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    border-color: #2ea44f;
+    background-color: rgb(9, 24, 19);
+    color: white;
+}
+
+.userdetailsheader {
     border:4px solid #2ea44f;
     border-radius: 10px;
     padding: 4px;
@@ -22,22 +33,7 @@ body {
     color: white;
 }
 
-.addcarbox {
-    width: 30vw;
-    text-align: center;
-    border:5px solid;
-    padding: 10px;
-    /* margin: 5px; */
-    border-radius: 10px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 15px;
-    font-weight: bold;
-    border-color: #2ea44f;
-    background-color: rgb(9, 24, 19);
-    color: white;
-}
-
-.addcarbutton {
+.submitbutton {
     appearance: none;
         background-color: rgb(46, 164, 78);
         border: 1px solid rgba(27, 31, 35, .15);
