--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -47,7 +47,6 @@ body {
 }
 
 .signupbutton {
-    appearance: none;
         background-color: rgb(46, 164, 78);
         border: 1px solid rgba(27, 31, 35, .15);
         border-radius: 6px;
@@ -59,7 +58,7 @@ body {
         font-size: 14px;
         font-weight: 600;
         line-height: 20px;
-        padding: 6px 16px;
+        padding: 6px 6px 6px 6px;
         position: relative;
         text-align: center;
         text-decoration: none;
