--- a/src/main/resources/static/css/availablecars.css
+++ b/src/main/resources/static/css/availablecars.css
@@ -9,7 +9,7 @@ body {
 }
     
 .caritems {
-    border:5px solid;
+    /* border:5px solid; */
     padding: 10px;
     margin: 5px;
     border-radius: 10px;
@@ -72,7 +72,7 @@ body {
     grid-template-columns: repeat(2, 1fr);
     grid-row-gap:0px;
     grid-column-gap:0px;
-    border:4px solid #2ea44f;
+    /* border:4px solid #2ea44f; */
     border-radius: 10px;
     padding: 4px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
