--- a/src/main/resources/static/css/availableusers.css
+++ b/src/main/resources/static/css/availableusers.css
@@ -1,5 +1,7 @@
 body {
     background-color:rgb(19, 19, 17)!important;
+    /* background-color: black!important; */
+    /* background-color:white!important; */
 }
 
 table {
